# polyphemus

./: .gitignore  AGENTS.md  ANALYSIS_SUMMARY.txt  BINANCE_MOMENTUM_DEPLOYMENT.md  CHARTS_MANIFEST.txt  CHARTS_QUICK_START.md  CHARTS_README.md  CLAUDE.md  DELIVERABLES.txt  DELIVERY_COMPLETE.txt  IMPLEMENTATION_GUIDE.md  LIFECYCLE.md  OPUS_46_FINDINGS_WEEK1.md  POLYPHEMUS_CHARTS_INDEX.md  POLYPHEMUS_CHARTS_SUMMARY.txt  POLYPHEMUS_DATA_REPORT.md  POLYPHEMUS_DATA_REPORT_OUTLINE.md  POLYPHEMUS_LAYMAN_ANALYSIS.md  POLYPHEMUS_STRATEGY_REPORT.md  README_ANALYSIS.md  README_SIGIL_STATUS.md  SIGIL_OPERATIONAL_SUMMARY.md  SIGIL_QUICK_REFERENCE.md  SIGIL_REPORTS_MANIFEST.txt  SIGIL_STATUS_2026-02-09.txt  SIGIL_STATUS_INDEX.txt  SIGIL_STATUS_SUMMARY.txt  START_HERE.txt  analysis_report.md  check_balance.py  check_chain.py  deploy_polyphemus.sh  deploy_private_lagbot.sh  derive_creds.py  diag_accum.py  diag_accum2.py  diag_proxy.py  diag_proxy_deep.py  diag_signing.py  diag_wallet.py  (+37 more)
ai-visibility-readiness/: FRAMEWORK.md  GLOSSARY.md
bot-dashboard/: DEPLOY.md  api.py  dashboard.service  deploy_dashboard.sh  nginx-dashboard.conf
bulenox-bot/: PROGRESS.md  backtest_comprehensive.py  binance_feed.py  bulenox_bot.py  check_status.py  config.py  data_health_check.py  log_spread.py  probe_all.py  probe_multi_gateway.py  probe_systems.py  research_metrics.py  rithmic_client.py  run.py  run_bot.py  test_login_v2.py  test_order_lifecycle.py  ticker_plant.py  trade_store.py  (+1 more)
lagbot-executor/: Cargo.toml
lagbot-executor/src/: clob.rs  config.rs  ipc.rs  main.rs  types.rs  ws.rs
(+632 files in other folders)
